force-app/main/default/objects/User/fields/amazonconnect__Amazon_Connect_Username__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__Amazon_Connect_Username__c</fullName>
    <label>Amazon Connect Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>