force-app/main/default/objects/User/fields/CS_Ladder_Level__c.field-meta.xml
<CustomField>
    <fullName>CS_Ladder_Level__c</fullName>
    <label>CS Ladder Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>Supervisor</fullName>
            </value>
            <value>
                <fullName>Team Leader</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>