force-app/main/default/objects/User/fields/Name2__c.field-meta.xml
<CustomField>
    <fullName>Name2__c</fullName>
    <formula>LastName &amp; &quot;, &quot; &amp; FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name2</label>
    <type>Text</type>
</CustomField>