force-app/main/default/objects/User/fields/Out_Of_Office_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Out_Of_Office_Start_Date__c</fullName>
    <label>Out Of Office Start Date</label>
    <type>Date</type>
</CustomField>